--- a/app/views/projects/_show.html.erb
+++ b/app/views/projects/_show.html.erb
@@ -20,12 +20,12 @@
     <table class="table table-hover table-striped ">
       <thead class=thead-dark>
       <tr>
-        <th><%= t('Project') %></th>
-        <th><%= t('Customer') %></th>
-        <th><%= t('Ware name') %></th>
-        <th><%= t('Provider name') %></th>
-        <th><%= t('Comment') %></th>
-        <th><%= t('Status') %></th>
+        <th><%= t('project') %></th>
+        <th><%= t('customer') %></th>
+        <th><%= t('ware_name') %></th>
+        <th><%= t('provider_name') %></th>
+        <th><%= t('comment') %></th>
+        <th><%= t('status') %></th>
         <th></th>
       </tr>
       </thead>
@@ -67,15 +67,15 @@
     <table class="table table-hover table-striped">
       <thead class=thead-dark>
       <tr>
-        <th><%= t('Project') %></th>
+        <th><%= t('project') %></th>
         <th><%= t('Name') %></th>
-        <th><%= t('Comment') %></th>
-        <th><%= t('Status') %></th>
+        <th><%= t('comment') %></th>
+        <th><%= t('status') %></th>
         <th><%= t('Date') %></th>
-        <th><%= t('Hourly rate') %></th>
-        <th><%= t('Duration') %></th>
-        <th><%= t('TVA rate') %></th>
-        <th><%= t('Total cost') %></th>
+        <th><%= t('hourly_rate') %></th>
+        <th><%= t('duration') %></th>
+        <th><%= t('tva_rate') %></th>
+        <th><%= t('total_cost') %></th>
         <th></th>
       </tr>
       </thead>
