--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -17,13 +17,13 @@
       <thead class=thead-dark>
       <tr>
         <th><%= t('Name') %></th>
-        <th><%= t('Mail') %></th>
-        <th><%= t('TVA record') %></th>
-        <th><%= t('Street') %></th>
-        <th><%= t('Number') %></th>
-        <th><%= t('Cp') %></th>
-        <th><%= t('Locality') %></th>
-        <th><%= t('Country') %></th>
+        <th><%= t('mail') %></th>
+        <th><%= t('tva_record') %></th>
+        <th><%= t('street') %></th>
+        <th><%= t('number') %></th>
+        <th><%= t('zip') %></th>
+        <th><%= t('locality') %></th>
+        <th><%= t('country') %></th>
         <th colspan="3"></th>
       </tr>
       </thead>
